build: standardize repository tooling and quality gates